[CSS] fix alignment

--- a/style.css
+++ b/style.css
@@ -1,14 +1,16 @@
 * {
     padding: 0;
     margin: 0;
-   
 }
 body {
     height: 100vh;
+    width: 100vw;
     background: url(https://cdn.dribbble.com/users/375867/screenshots/1480136/game-assets-game-background-sidescroller.png);
     background-size: cover;
+    background-repeat: no-repeat;
     background-position: center;
     font-family: 'Bungee Shade', cursive;
+    margin: 0 auto;
 }
 .title {
     font-size: 40px;
